         - check_drivesize ignore drive not found errors if empty-state is set (#315)
         - check_cpu add idle time (#308)
         - check_cpu add procs-to-show option to show 10 N processes
         - check_memory add procs-to-show option to show 10 N processes sorted by memory usage
         - add hide-args options when using procs-to-show to only show the executable without arguments
         - chore: update dependencies

0.41     Fri Dec 19 19:16:59 CET 2025
         - fix windows disk/mount checks showing only the first drive

0.40     Wed Dec 17 14:07:35 CET 2025
         - change minimum golang requirement to 1.25.5
         - add support for recursive `script path`
         - add support for cyclic alias check

0.39     Tue Nov 18 14:22:01 CET 2025
         - optionally send HSTS header in HTTP response
         - update node exporter to 1.10.2
         - check_service: improve filter by name
         - check_process: add cpu_seconds attribute
         - chore: update dependencies

0.38     Fri Oct 10 14:41:11 CEST 2025
         - fix plugin output ending in chinese characters (#261)
         - chore: update dependencies
         - improve logging of invalid http requests
         - check_logfile: improve detection of required macros
         - add list-combine option
         - add challenge password support for csr
         - add CheckLogFile option to /modules configuration
         - add "allowed pattern" option for check_logfiles
         - add new macro operator trim and chomp

0.37     Sun Sep  7 11:41:00 CEST 2025
         - update windows exporter to 0.31.3
         - chore: update dependencies
         - change minimum golang requirement to 1.24.6
         - osx:
           - fix corrupted json output (invalid character '\x00' looking for beginning of object key string)

0.36     Tue Jul 29 14:24:04 CEST 2025
         - add new attribute "require password" which must be disabled to allow requests without password