@@ -7,6 +7,7 @@ next:
          - check_cpu add procs-to-show option to show 10 N processes
          - check_memory add procs-to-show option to show 10 N processes sorted by memory usage
          - add hide-args options when using procs-to-show to only show the executable without arguments
+         - fix showing procs-to-show via rest api
          - chore: update dependencies
 
 0.41     Fri Dec 19 19:16:59 CET 2025
